# XRmonitors

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  XRmonitors.sln
XRmonitorsCamera/: CMakeLists.txt
XRmonitorsCamera/msvc/: XRmonitorsCamera.rc  XRmonitorsCamera.vcxproj  XRmonitorsCamera.vcxproj.filters  resource.h
XRmonitorsCamera/src/: ReadCalibration.cpp  ReadCalibration.hpp  implant_main.cpp
XRmonitorsHologram/: ApplicationSettings.cpp  ApplicationSettings.hpp  CameraCalibration.cpp  CameraCalibration.hpp  CameraImager.cpp  CameraImager.hpp  CameraRenderer.cpp  CameraRenderer.hpp  D3D11CrossAdapterDuplication.cpp  D3D11CrossAdapterDuplication.hpp  D3D11DuplicationCommon.cpp  D3D11DuplicationCommon.hpp  D3D11SameAdapterDuplication.cpp  D3D11SameAdapterDuplication.hpp  D3D11Tools.cpp  D3D11Tools.hpp  HolographicInputBanner.cpp  HolographicInputBanner.hpp  InputWindow.cpp  InputWindow.hpp  KeyboardInput.cpp  KeyboardInput.hpp  Main.cpp  Main.hpp  MonitorChangeWatcher.cpp  MonitorChangeWatcher.hpp  MonitorEnumerator.cpp  MonitorEnumerator.hpp  MonitorRenderController.cpp  MonitorRenderController.hpp  MonitorRenderModel.cpp  MonitorRenderModel.hpp  MonitorRenderView.cpp  MonitorRenderView.hpp  MonitorTools.cpp  MonitorTools.hpp  OpenXrD3D11.cpp  OpenXrD3D11.hpp  OpenXrD3D11Swapchains.cpp  OpenXrD3D11Swapchains.hpp  (+9 more)
XRmonitorsHologram/MsXrLoader/: jsoncpp.cpp  loader.rc  openxr_loader_win32.vcxproj  runtime_interface.cpp  xr_generated_loader.cpp  xr_generated_utilities.c
XRmonitorsHologram/XrUtility/: XrError.cpp  XrError.h  XrHandle.h
XRmonitorsHologram/_attic_/: AppMain.cpp  AppMain.h  BezelRenderer.cpp  BezelRenderer.hpp  DesktopRender.cpp  DesktopRender.hpp  GlobalRenderState.cpp  GlobalRenderState.hpp  MonitorHologramMain.cpp  MonitorHologramMain.h  OpenXrGraphics.cpp  OpenXrGraphics.hpp  OpenXrProgram.hpp  QuadLayersTracker.cpp  QuadLayersTracker.hpp  SpatialInputHandler.cpp  SpatialInputHandler.h
XRmonitorsHologram/_attic_/Common/: CameraResources.cpp  CameraResources.h  DeviceResources.cpp  DeviceResources.h
XRmonitorsHologram/_attic_/render_bezels/: BezelPixelShader.hlsl  BezelPixelShader.inl  BezelVPRTVertexShader.hlsl  BezelVPRTVertexShader.inl  BezelVertexShader.hlsl  BezelVertexShader.inl  BezelVertexShaderShared.hlsl  ShaderBezelRenderer.cpp  ShaderBezelRenderer.h  ShaderBezelStructures.h
XRmonitorsHologram/_attic_/render_cameras/: CameraPixelShader.hlsl  CameraPixelShader.inl  CameraVPRTVertexShader.hlsl  CameraVPRTVertexShader.inl  CameraVertexShader.hlsl  CameraVertexShader.inl  CameraVertexShaderShared.hlsl  ShaderCameraRenderer.cpp  ShaderCameraRenderer.h  ShaderCameraStructures.h  ShaderMonitorStructures.h
XRmonitorsHologram/_attic_/render_monitors/: MonitorPixelShader.hlsl  MonitorPixelShader.inl  MonitorVPRTVertexShader.hlsl  MonitorVPRTVertexShader.inl  MonitorVertexShader.hlsl  MonitorVertexShader.inl  MonitorVertexShaderShared.hlsl  ShaderMonitorRenderer.cpp  ShaderMonitorRenderer.h  ShaderMonitorStructures.h
XRmonitorsService/: CMakeLists.txt
XRmonitorsService/msvc/: MrCamService.vcxproj  MrCamService.vcxproj.filters  XRmonitorsService.rc  resource.h
XRmonitorsService/src/: CameraServer.cpp  CameraServer.hpp  RemoteProcess.cpp  RemoteProcess.hpp  UsbHubPowerFix.cpp  UsbHubPowerFix.hpp  server_main.cpp
XRmonitorsSetup/: XRmonitorsSetup.sln
XRmonitorsSetup/XRmonitorsInstaller/: 00_WelcomePanel.Designer.cs  00_WelcomePanel.cs  01_LegalPanel.Designer.cs  01_LegalPanel.cs  03_InstallPanel.Designer.cs  03_InstallPanel.cs  04_ProgressPanel.Designer.cs  04_ProgressPanel.cs  05_CompletePanel.Designer.cs  05_CompletePanel.cs  06_FailedPanel.Designer.cs  06_FailedPanel.cs  10_RemovePanel.Designer.cs  10_RemovePanel.cs  11_RemoveProgressPanel.Designer.cs  11_RemoveProgressPanel.cs  12_RemoveDonePanel.Designer.cs  12_RemoveDonePanel.cs  13_RemoveFailedPanel.Designer.cs  13_RemoveFailedPanel.cs  App.config  Program.cs  SetupForm.Designer.cs  SetupForm.cs  SetupForm.resx  XRmonitorsInstaller.csproj  altpcgi.cs  packages.config
XRmonitorsSetup/XRmonitorsInstaller/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
XRmonitorsSetup/XRmonitorsSetup/: Program.cs  XRmonitorsSetup.csproj
XRmonitorsSetup/XRmonitorsSetup/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
XRmonitorsSetup/XRmonitorsSetup/Resources/: camera_calibration.ini
XRmonitorsUI/ToggleSwitch/: ToggleSwitch.csproj  VersionHistory.txt
XRmonitorsUI/ToggleSwitch/Properties/: AssemblyInfo.cs
XRmonitorsUI/XRmonitorsUI/: AboutBox.Designer.cs  AboutBox.cs  AboutBox.resx  App.config  DemoExpired.Designer.cs  DemoExpired.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  OpenXrNeeded.Designer.cs  OpenXrNeeded.cs  OpenXrNeeded.resx  Program.cs  Registration.Designer.cs  Registration.cs  ReportIssue.Designer.cs  ReportIssue.cs  XRmonitorsUI.csproj  altpcgi.cs  packages.config
XRmonitorsUI/XRmonitorsUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.settings  (+1 more)
camera_tester/: CMakeLists.txt
camera_tester/src/: CameraConfigTest.cpp  CameraTester.cpp
core/: CMakeLists.txt
core/include/: core.hpp  core_bit_math.hpp  core_counter_math.hpp  core_logger.hpp  core_mmap.hpp  core_serializer.hpp  core_string.hpp  core_win32.hpp  core_win32_pipe.hpp
core/msvc/: CoreLib.vcxproj  CoreLib.vcxproj.filters
core/src/: core.cpp  core_logger.cpp  core_mmap.cpp  core_serializer.cpp  core_string.cpp  core_win32.cpp  core_win32_pipe.cpp
detours/: CMakeLists.txt
detours/msvc/: Detours.vcxproj  Detours.vcxproj.filters
mrcam_client/: CMakeLists.txt
mrcam_client/include/: CameraClient.hpp
mrcam_client/msvc/: MrCamClient.vcxproj  MrCamClient.vcxproj.filters
mrcam_client/src/: CameraClient.cpp
protocols/: CMakeLists.txt
protocols/include/: implant_abi.hpp  xrm_plugins_abi.hpp  xrm_ui_abi.hpp
protocols/msvc/: Protocols.vcxproj  Protocols.vcxproj.filters
protocols/src/: implant_abi.cpp  xrm_plugins_abi.cpp  xrm_ui_abi.cpp
signing/: PublicCertificate.cer
