cmake_minimum_required(VERSION 3.5)
project(mrdesk LANGUAGES CXX)

if(NOT TARGET protocols)
    add_subdirectory(protocols)
endif()
if(NOT TARGET core)
    add_subdirectory(core)
endif()
if(NOT TARGET detours)
    add_subdirectory(detours)
endif()
if(NOT TARGET fmt)
    add_subdirectory(fmt)
endif()
if(NOT TARGET mrcam_client)
    add_subdirectory(mrcam_client)
endif()
if(NOT TARGET mrcam_implant)
    add_subdirectory(XRmonitorsCamera)
endif()
if(NOT TARGET mrcam_server)
    add_subdirectory(XRmonitorsService)
endif()
if(NOT TARGET camera_tester)
    add_subdirectory(camera_tester)
endif()
